--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Noto+Sans:wght@300&display=swap');
+
+body {
+    font-family: "IBM Plex Mono", 'Courier New', Courier, monospace;
+}
