--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Noto+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 
 body {
-    font-family: "IBM Plex Mono", 'Courier New', Courier, monospace;
+    background-color: #212121;
+    font-family: "IBM Plex Mono";
+}
+
+.teamHeader {
+    color: #4a86e8;
+    text-transform: uppercase;
+    font-family: 'Rajdhani', sans-serif;
 }
