--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 body {
     background-color: #212121;
-    font-family: "IBM Plex Mono";
+    font-family: "IBM Plex Serif", sans-serif;
 }
 
 .teamHeader {
