--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,12 @@ h1 {
 }
 
 .teamHeader {
-    font-size: 70px;
+    font-size: 70pt;
     color: #4a86e8;
 }
 
 nav {
+    font-size: 27pt;
     overflow: hidden;
     text-align: center;
 }
