--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 h1 {
     text-transform: uppercase;
     text-align: center;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: "Rajdhani", sans-serif;
 }
 
 .teamHeader {
@@ -18,6 +18,7 @@ h1 {
 }
 
 nav {
+    font-family: "Rajdhani", sans-serif;
     color: #a4c2f4;
     font-size: 27pt;
     overflow: hidden;
