Update header bar background color

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ h1 {
     color: #4a86e8;
 }
 
+header {
+    color: #666666;
+}
+
 nav {
     font-family: "Rajdhani", sans-serif;
     color: #a4c2f4;
