--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Noto+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 body {
     background-color: #212121;
     font-family: "IBM Plex Serif", sans-serif;
@@ -37,3 +39,5 @@ nav a {
 nav a:hover {
     text-decoration: underline;
 }
+
+
