--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ nav a:hover {
     text-align: center;
     font-family: "Rajdhani";
     font-size: 43pt;
-    font-weight: bolder;
+    font-weight: lighter;
     color: #ffffff;
 }
 
