set different height & width

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ nav a:hover {
 .firstlogo{
     padding-top: 2.5%;
     padding-left: 12%;
+    width: 625px;
+    height: 375px;
 }
 
 .aboutheaders {
