--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ nav a:hover {
     text-align: center;
     font-size: 18pt;
     line-height: 1.5;
-    padding-bottom: 2%;
+    padding-bottom: 1%;
 
 }
 
@@ -54,8 +54,9 @@ nav a:hover {
     float: right;
     width: 500px;
     height: 700px;
-    padding-right: 5%;
-    padding-left: 8%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .firstwebhyper {
@@ -63,15 +64,17 @@ nav a:hover {
     font-size: 35px;
     text-align: center;
     display: block;
-    margin: auto;
-
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 1%;
 }
 
 .firstlogo{
-    padding-top: 2.5%;
-    padding-left: 12%;
     width: 625px;
     height: 375px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .aboutheaders {
