--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,39 @@ nav a:hover {
     color: #000;
     background-color: #c9daf8ff;
 }
+
+.building_image {
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    float: left
+}
+
+.programming_image {
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    float: right
+}
+
+.strategy_image {
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    float: left
+}
+
+.outreach_image {
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    float: right
+}
