--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ nav a:hover {
     width: 500px;
     height: 700px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 4%;
+    margin-right: 4%;
 }
 
 .handbook {
