--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Noto+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;700&display=swap');
 
+:root {
+    --body-bg-color: #212121;
+    --navbar-text-color: #a4c2f4;
+}
 
 body {
-    background-color: #212121;
+    background-color: var(--body-bg-color);
     font-family: "IBM Plex Serif", sans-serif;
 }
 
@@ -18,21 +22,17 @@ h1 {
     color: #4a86e8;
 }
 
-header {
-    color: #666666;
-}
-
 nav {
     font-family: "Rajdhani", sans-serif;
     font-weight: bold;
-    color: #a4c2f4;
+    color: var(--navbar-text-color);
     font-size: 27pt;
     overflow: hidden;
     text-align: center;
 }
 
 nav a {
-    color: #a4c2f4;
+    color: var(--navbar-text-color);
     text-decoration: none;
 }
 
@@ -40,7 +40,11 @@ nav a:hover {
     text-decoration: underline;
 }
 
-.color-test{
+footer {
+    border-top: ;
+}
+
+.color-test {
     color: white;
     font-family: 'Rajdhani';
     text-align: center;
@@ -82,7 +86,7 @@ nav a:hover {
     text-decoration: underline;
 }
 
-.firstlogo{
+.firstlogo {
     width: 625px;
     height: 375px;
     display: block;
@@ -98,6 +102,7 @@ nav a:hover {
     font-weight: lighter;
     color: #ffffff;
 }
+
 .aboutboxes {
     text-transform: uppercase;
     text-align: center;
@@ -143,4 +148,3 @@ nav a:hover {
     margin-right: auto;
     float: right
 }
-
