Change Slider to Slideshow

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ nav a:hover {
     background-color: #c9daf8ff;
 }
 
-/* Image Slider starts here*/
+/* Image Slideshow starts here*/
 .slider {
     position: relative;
     overflow: hidden;
@@ -195,4 +195,4 @@ nav a:hover {
     background-color: rgba(0, 0, 0, 0.8);
   }
   
-/* Image Slider ends here */
+/* Image Slideshow ends here */
