--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,8 @@ nav a:hover {
 }
 
 .box {
-  background-color: white;
+  text-align: center;
+  background-color: #c9daf8ff;  
   padding: 30px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
